# PhD_SupplementaryCode

./: README.md  README.md.backup
ROM_NSE/dealII/: .gitignore  CMakeLists.txt  README.md  cases.txt  clean  cmake_install.cmake  debugging_old.txt  edit_ops.sh  greedy.sh  lifting.h5  logging_FEM.txt  logging_FEM_4_refinements.txt  main  main.cc  mean_vector_mu.h5  nse_tmp.cc  organize.sh  paraview_filter.txt  paraview_filter2.txt  pressure.txt  pressure1.txt  pressure_laplace_matrix.txt  read_matrix.py  run  run.sh  run_tests  state.pvsm  surrogate.txt  temp.cc  window_layout.pwin
ROM_NSE/dealII/condor_submit/: make.submit  rom-nse.submit  rom-nse_fem.submit  rom-nse_fem_mu_050.submit  rom-nse_fem_mu_060.submit  rom-nse_fem_mu_070.submit  rom-nse_fem_mu_080.submit  rom-nse_fem_mu_090.submit  rom-nse_fem_mu_100.submit  rom-nse_fem_mu_110.submit  rom-nse_fem_mu_120.submit  rom-nse_fem_mu_130.submit  rom-nse_fem_mu_140.submit  rom-nse_fem_mu_150.submit  rom-nse_fem_mu_160.submit  rom-nse_fem_mu_170.submit  rom-nse_fem_mu_180.submit  rom-nse_fem_mu_190.submit  rom-nse_fem_mu_200.submit  start_condor.sh
ROM_NSE/dealII/docs/certified/: main.aux  main.bcf  (+3 more)
ROM_NSE/dealII/include/: RedSVD-h  RedSVD.h  nse.h  pod.h  pod_greedy.h  rom.h
ROM_NSE/dealII/parameter_files/: options.prm  options_fem.prm  options_kourosh.prm  options_lonely.prm  options_lonely2.prm  options_new_100_150_2.prm  options_new_100_150_2_absolute_2.prm  options_new_100_150_2_no_mean.prm  options_new_50_150_2.prm  options_normal.prm  options_restart.prm  options_test.prm  options_test.prm.sys  options_test2.prm  options_test2pc.prm  options_test2pcmean.prm  options_test2pcmean2.prm  options_vp.prm  options_vp_appel.prm  options_vp_laptop.prm  options_vp_long.prm
ROM_NSE/dealII/postprocessing/: check_matrix.m  check_pressure_pod_modes.m  compare_quantities.asv  compare_quantities.m  compare_quantities.py  correct_data_files.m  drag_100.eps  drag_140.eps  drag_150.eps  drag_50.eps  drag_90.eps  drag_lift_N_u=15eps.eps  error.eps  error_RE.eps  error_change.eps  eval_certified.m  evaluate_data.m  evaluate_reduced_values.m  evaluate_snapshots.m  investiage_nonlinearities.m  investiagte_greedy.asv  investiagte_greedy.m  kourosh.asv  kourosh.m  lift_100.eps  lift_140.eps  lift_150.eps  lift_50.eps  lift_90.eps  matrices.m  mean_vs_nomean.asv  mean_vs_nomean.m  nn_pressure.asv  nn_pressure.m  penalty.asv  penalty.m  pod_values.asv  pod_values.m  speed_up.eps  test.m  (+5 more)
ROM_NSE/dealII/source/: nse.cc  pod.cc  pod_greedy.cc  rom.cc
(+169 files in other folders)
